--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
     "type": "git",
     "url": "git+https://github.com/RodoRivera23/eCommerce_backend.git"
   },
-  "keywords": [],
-  "author": "",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/RodoRivera23/eCommerce_backend/issues"
   },
-  "homepage": "https://github.com/RodoRivera23/eCommerce_backend#readme"
+  "homepage": "https://github.com/RodoRivera23/eCommerce_backend#readme",
+  "dependencies": {
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "mysql2": "^3.6.3",
+    "sequelize": "^6.35.0"
+  }
 }
