--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "seeds": "seeds/seed.js"
   },
   "repository": {
     "type": "git",
@@ -17,7 +18,7 @@
   },
   "homepage": "https://github.com/RodoRivera23/eCommerce_backend#readme",
   "dependencies": {
-    "dotenv": "^16.3.1",
+    "dotenv": "8.2.0",
     "express": "^4.18.2",
     "mysql2": "^3.6.3",
     "sequelize": "^6.35.0"
