--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "seeds": "seeds/seed.js"
+    "seeds": "seeds/seeds.js"
   },
   "repository": {
     "type": "git",
